<resources>
    <string name="app_name">Calorie Count</string>

    <string name="create_button"> Create a profile </string>
    <string name="height">Height (in cm)</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="cm">cm</string>
    <string name="calculate">Calculate</string>
    <string name="male_image">Male_Image</string>
    <string name="male">Male</string>
    <string name="female_image">Female_Image</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="in_kgs">Kgs</string>
    <string name="calorie_requirement_page">Calorie_requirement_page</string>
    <string name="daily_requirement"> Your daily calorie requirement is 1500 Kcal</string>
    <string name="start">Start your day</string>
    <string name="day_Overview">Day Overview</string>
    <string name="remaining_calorie">of total kcal</string>
    <string name="add">Add</string>
    <string name="complete_your_day">Complete your day</string>
    <string name="number_of_calories">Number of Calories</string>
    <string name="password">Password</string>
    <string name="welcome">WELCOME TO CALORIE COUNT</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="get_started">Let\'s get started</string>
    <string name="food_name">Food name</string>
    <string name="calorie_per_100_gram">kcal per 100 grams</string>
    <string name="portion">portion</string>
    <string name="total_calories">Total Calories (in Kcal)</string>
    <string name="confirm_to_add_food_to_diary">confirm to add food to diary</string>
    <string name="delete_food">delete food</string>
    <string name="calories">Calories</string>
    <string name="add_food">Add food</string>
    <string name="autofill_hint">Your hint here</string>
    <string name="completed_day">Congratulations! Your calorie intake for the day was 1200 Kcal which is 300 Kcal lower than recommended. If you continue like this, you will be losing weight.</string>
    <string name="create_an_account">Create an account</string>
    <string name="total_calorie_for_entry">The total calorie for this entry is</string>
    <string name="portion_size">(portion size = 100 grams)</string>
    <string name="add_to_your_day">Add to your day</string>
    <string name="filter_by_day">Filter by day</string>
    <string name="app_logo">app logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="kcal">Kcal</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="delete_profile">Delete my profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="next">Next</string>
    <string name="decrement">decrement</string>
    <string name="increment">increment</string>
    <string name="update">update</string>
    <string name="new_password">New password</string>
    <string name="your_password">Your password:</string>
    <string name="reveal_my_password">Reveal my password</string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="let_s_start_over_tomorrow">Let\'s start over tomorrow</string>
    <string name="total_kcal_intake">Total Kcal intake :</string>
    <string name="empty"> </string>
    <string name="maintain_weight">Your calorie intake for the day was %1$s Kcal. you are on course to maintain your weight  </string>
    <string name="gain_weight">Your calorie intake for the day was %1$s Kcal which is %2$s higher than recommended. If you continue like this, you will be gaining weight. </string>
    <string name="loose_weight"> Your calorie intake for the day was %1$s Kcal which is %2$s lower than recommended. If you continue like this, you will be losing weight.  </string>
    <string name="of_total">of %1$s kcal</string>
    <string name="no_entry">No entry has been made for today!</string>
    <string name="your_daily_requirement">Your daily calorie requirement is %1$s kcal.</string>
    <string name="Delete_profile">Delete the profile</string>
    <string name="confirm_delete_profile">Are you sure you want to delete your profile?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="successfully_deleted">The profile was successfully deleted!</string>
    <string name="successfully_updated">The profile was successfully updated!</string>
    <string name="values_less_than_zero"> Values cannot be less or equal to 0! </string>
    <string name="fields_required"> All fields required!</string>
    <string name="entry_successfully_updated">The entry was successfully updated!</string>
    <string name="passwords_do_not_match"> Passwords do not match!</string>
    <string name="user_exists"> The username already exists! </string>
    <string name="invalid"> Invalid credentials! </string>
    <string name="sure_exit"> Are you sure you want to exit? </string>
    <string name="exit"> Really exit?</string>
    <string name="log_out"> Logging out?</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="home">Home</string>
    <string name="enter_birth_date">Enter your birth date</string>
    <string name="gender_selection"> Select a gender </string>
    <string name="height_selection"> Select a height </string>
    <string name="weight_selection"> Enter a valid weight</string>
    <string name="no_user">No user found</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_logout">Logout</string>


</resources>