<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1d1d"
    tools:context=".Profile">

<!-- references taken from   https://youtu.be/UydBl58KJZQ -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerHorizontalLine" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/centerVerticalLine" />

    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_above="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:background="@drawable/no_focus">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@+id/textMale"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/male_image"
            android:src="@drawable/male" />

        <TextView
            android:id="@+id/textMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_above="@id/heightLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/no_focus">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@+id/textFemale"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/female_image"
            android:src="@drawable/female" />

        <TextView
            android:id="@+id/textFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/female"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/heightLayout"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_above="@+id/centerHorizontalLine"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/card_background">

        <TextView
            android:id="@+id/TvHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/currentHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TvHeight"
            android:layout_marginTop="5dp"
            android:layout_centerInParent="true"
            android:text="@string/empty"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>



        <SeekBar
            android:layout_below="@+id/currentHeight"
            android:layout_marginTop="5dp"
            android:id="@+id/seekBarHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:progressTint="#FF4C4C">

        </SeekBar>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/currentWeight"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_below="@+id/heightLayout"
        android:layout_marginTop="85dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:layout_marginEnd="20dp"
        android:background="@drawable/card_background">

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textWeight"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/weightIncrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/ic_add"
            android:contentDescription="@string/increment" />

        <ImageView
            android:id="@+id/weightDecrement"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_minus"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/decrement" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:background="@drawable/card_background"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:layout_below="@id/heightLayout"
        android:layout_marginTop="85dp"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/textDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date_of_birth"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDOB"
            android:layout_centerInParent="true"
            android:layout_marginTop="35dp"
            android:minHeight="48dp"
            android:text="@string/dd_mm_yyyy"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/calculateBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>