<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#1d1e1e"
    tools:context=".ResetPassword">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/card_background"
        android:orientation="vertical">


            <EditText
                android:id="@+id/resetFirstName"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:background="#474646"
                android:hint="@string/first_name"
                android:textColorHint="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="30dp"
                android:inputType="text"
                android:autofillHints="First Name" />

            <EditText
                android:id="@+id/resetLastName"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="#474646"
                android:padding="10dp"
                android:hint="@string/last_name"
                android:textColorHint="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:autofillHints="last name" />

        <EditText
            android:id="@+id/resetUserName"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#474646"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold"
            android:autofillHints="username" />

        <TextView
            android:id="@+id/txtReveal"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/your_password"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/revealPassword"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="#474646"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <android.widget.Button
            android:id="@+id/revealBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/add_button_background"
            android:text="@string/reveal_my_password"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goBackLogin"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:text="@string/go_back_to_login"
            android:textStyle="italic"/>


    </LinearLayout>


    </ScrollView>

