<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1e1e"
    tools:context=".Credentials">

    <RelativeLayout
        android:id="@+id/createAccountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createAccountText"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/card_background"
        android:padding="20dp">

        <EditText
            android:id="@+id/etFirstName"
            android:background="@drawable/text_background"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp"
            android:autofillHints="your first name" />

        <EditText
            android:id="@+id/etLastName"
            android:background="@drawable/text_background"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/etFirstName"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:autofillHints="your last name"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etUserName"
            android:background="@drawable/text_background"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/etLastName"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp"
            android:autofillHints="your username" />


        <EditText
            android:autofillHints="password"
            android:id="@+id/etPassword"
            android:background="@drawable/text_background"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/etUserName"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etReTypePassword"
            android:background="@drawable/text_background"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/etPassword"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="15sp"
            android:autofillHints="password" />

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/nextBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>