<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="#1e1d1d"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:contentPadding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:padding="10dp"
        android:background="@drawable/card_background"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etUpdateFoodName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:autofillHints="Your hint here"
            android:hint="@string/food_name"
            android:inputType="text"
            android:background="@drawable/text_background"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUpdateCaloriePer100Gram"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/text_background"
            android:layout_below="@+id/etUpdateFoodName"
            android:layout_centerInParent="true"
            android:autofillHints="Your hint here"
            android:hint="@string/calorie_per_100_gram"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUpdatePortion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:layout_marginTop="8dp"
            android:layout_below="@id/etUpdateCaloriePer100Gram"
            android:layout_centerInParent="true"
            android:layout_marginStart="90dp"
            android:autofillHints="Your hint here"
            android:hint="@string/portion"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/updatePortionSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUpdatePortion"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/portion_size"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvTotalCalorieForEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updatePortionSize"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/total_calorie_for_entry"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvNumTotalCalorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTotalCalorieForEntry"
            android:layout_toStartOf="@+id/tvKcal"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/number"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvKcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTotalCalorieForEntry"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="120dp"
            android:text="@string/kcal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <android.widget.Button
            android:id="@+id/confirmChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNumTotalCalorie"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/add_button_background"
            android:padding="10dp"
            android:text="@string/confirm_changes"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>